--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -40,7 +40,7 @@
 
 <!-- Add the YouTube icon to footer if _config.yml has the youtube value specified. -->
 {% if site.footer-links.youtube %}
-    <a href="https://youtube.com/{{ site.footer-links.youtube }}" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
+    <a href="https://youtube.com/channel/{{ site.footer-links.youtube }}" target="_blank"><i class="fab fa-youtube fa-lg"></i></a>
 {% endif %}
 
 <!-- Add the Reddit icon to footer if _config.yml has the reddit value specified. -->
