--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -2,12 +2,11 @@
 .highlight {
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
-  border: 1px solid #ddd;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
   box-shadow: 3px 3px rgba(0,0,0,0.1);
-  margin: 5px 0 5px 0;
-  overflow: scroll;
+  margin: 7px 0 7px 0;
+  overflow: auto;
 }
 
 code {
