--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1><i>{{ page.description }}</i>
-  <hr/>
+  <h1>{{ page.title }}</h1>
 
   <div class="entry">
+    <i>{{ page.description }}</i>
     {{ content }}
   </div>
 
