--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,6 +1,6 @@
 
 .highlight {
-  background-color: #efefef;
+  background-color: #333;
   padding: 7px 7px 7px 10px;
   -moz-box-shadow: 3px 3px rgba(0,0,0,0.1);
   -webkit-box-shadow: 3px 3px rgba(0,0,0,0.1);
@@ -11,6 +11,7 @@
 
 code {
   font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-size: 75%;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
@@ -55,7 +56,7 @@ code {
 .highlight .nf { color: #268BD2 } /* Name.Function */
 .highlight .nl { color: #93A1A1 } /* Name.Label */
 .highlight .nn { color: #93A1A1 } /* Name.Namespace */
-.highlight .nx { color: #555 } /* Name.Other */
+.highlight .nx { color: #ccc } /* Name.Other */
 .highlight .py { color: #93A1A1 } /* Name.Property */
 .highlight .nt { color: #268BD2 } /* Name.Tag */
 .highlight .nv { color: #268BD2 } /* Name.Variable */
