--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -11,7 +11,8 @@ $black: #000;
 $darkerGray: #222;
 $darkGray: #333;
 $gray: #666;
-$lightGray: #eee;
+$lightGray: #ccc;
+$lighterGray: #ddd;
 $white: #fff;
 
 // Font stacks
