--- a/style.scss
+++ b/style.scss
@@ -122,11 +122,11 @@ img {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
+  color: $blue;
   background: $darkGray;
 }
 ::selection {
-  color: $black;
+  color: $blue;
   background: $darkGray;
 }
 
