--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -33,6 +33,11 @@
     <a href="https://www.twitter.com/{{ site.footer-links.twitter }}" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
 {% endif %}
 
+<!-- Add the Threads icon to footer if _config.yml has the threads value specified. -->
+{% if site.footer-links.threads %}
+    <a href="https://www.threads.net/{{ site.footer-links.threads }}" target="_blank"><i class="fab fa-threads fa-lg"></i></a>
+{% endif %}
+
 <!-- Add the Stack Overflow icon to footer if _config.yml has the stackoverflow value specified. -->
 {% if site.footer-links.stackoverflow %}
     <a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}" target="_blank"><i class="fab fa-stack-overflow fa-lg"></i></a>
@@ -53,9 +58,9 @@
     <a href="https://taplist.io/taplist-{{ site.footer-links.taplistio }}" target="_blank"><i class="fas fa-beer fa-lg"></i></a>
 {% endif %}
 
-<!-- Add the Drafting Compass icon to footer if _config.yml has the thingiverse value specified. -->
-{% if site.footer-links.thingiverse %}
-    <a href="https://www.thingiverse.com/{{ site.footer-links.thingiverse }}/designs" target="_blank"><i class="fas fa-drafting-compass fa-lg"></i></a>
+<!-- Add the Drafting Compass icon to footer if _config.yml has the printables value specified. -->
+{% if site.footer-links.printables %}
+    <a href="https://www.printables.com/@{{ site.footer-links.printables }}/models" target="_blank"><i class="fas fa-drafting-compass fa-lg"></i></a>
 {% endif %}
 
 <!-- Always add the rss feed icon. -->
