Replacing threads link with BlueSky link.

--- a/_includes/icons.html
+++ b/_includes/icons.html
@@ -33,9 +33,9 @@
     <a href="https://www.twitter.com/{{ site.footer-links.twitter }}" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
 {% endif %}
 
-<!-- Add the Threads icon to footer if _config.yml has the threads value specified. -->
-{% if site.footer-links.threads %}
-    <a href="https://www.threads.net/{{ site.footer-links.threads }}" target="_blank"><i class="fab fa-threads fa-lg"></i></a>
+<!-- Add the BlueSky icon to footer if _config.yml has the bluesky value specified. -->
+{% if site.footer-links.bluesky %}
+    <a href="https://bsky.app/profile/{{ site.footer-links.bluesky }}" target="_blank"><i class="fab fa-bluesky fa-lg"></i></a>
 {% endif %}
 
 <!-- Add the Stack Overflow icon to footer if _config.yml has the stackoverflow value specified. -->
